--- a/dhis2-ou-fhir/pom.xml
+++ b/dhis2-ou-fhir/pom.xml
@@ -99,6 +99,16 @@
             <artifactId>camel-rest-starter</artifactId>
             <version>${camel.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-fhir</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-fhir-api</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
 
     </dependencies>
 
