feat: update fhir resources

--- a/dhis2-ou-fhir/pom.xml
+++ b/dhis2-ou-fhir/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>camel-fhir-api</artifactId>
             <version>${camel.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-jsonpath-starter</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
 
     </dependencies>
 
