--- a/dhis2-ou-fhir/src/main/resources/application.yml
+++ b/dhis2-ou-fhir/src/main/resources/application.yml
@@ -4,6 +4,4 @@ dhis2:
     username: admin
     password: district
   target:
-    base-url: https://play.dhis2.org/2.39.2/api
-    username: admin
-    password: district
+    base-url: http://localhost:8081/fhir
